css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

.container {
  width: 1158px;
  margin: 0 auto;
  padding: 0px 15px;
}

body {
  font-family: 'Roboto', sans-serif;
  color: #2e2f42;
  font-size: 16px;
  line-height: 1.5;
}

.order-button {
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  background-color: #4d5ae6;
  color: #ffffff;
  cursor: pointer;
  justify-content: center;
  padding: 16px 32px;
}

.order-button:hover {
  background-color: #404bbf;
}

.sections-style {
  background-color: #f4f4fd;
}

.sections-style .container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding: 120px 0px;
  gap: 72px;
}

.logo {
  font-family: 'Raleway', sans-serif;
  font-weight: 700;
  line-height: 1.116;
}

.web {
  color: #4d5ae6;
}

.studio {
  color: #2e2f42;
}

.studio2 {
  color: #f4f4fd;
}

.nav-link {
  color: #2e2f42;
}

.nav-link:hover {
  color: #404bbf;
}

.header-style .container {
  display: flex;
  align-items: center;
  justify-content: space-around;
  padding: 24px 0px;
}

.adress-link {
  color: #434455;
  cursor: pointer;
}

.adress-link:hover {
  color: #404bbf;
}

a {
  text-decoration: none;
}

address {
  display: flex;
  gap: 40px;
}

h1 {
  font-size: 56px;
  line-height: 1.07;
  color: #ffffff;
  height: 120px;
  width: 496px;
}

h2 {
  font-weight: 700;
  font-size: 36px;
  line-height: 40px;
  color: #2e2f42;
  text-align: center;
}

h3 {
  font-weight: 500;
  font-size: 20px;
  line-height: 24px;
  color: #2e2f42;
}

.hero .container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 188px 472px;
  gap: 48px;
}

.hero {
  background-color: #2e2f42;
}

.footer-style {
  background-color: #2e2f42;
  padding: 100px 0px 100px 0px;
}

.footer-style .container {
  display: flex;
  flex-direction: column;
}

.footer-text {
  color: #f4f4fd;
  max-width: 264px;
}

.footer-logo {
  margin: 0px 0px 16px 0px;
}

.nav-ul {
  display: flex;
  list-style: none;
  gap: 40px;
}

.team-group {
  list-style: none;
  display: flex;
  gap: 24px;
  justify-content: center;
}

.team-headings {
  text-align: center;
  padding-top: 32px;
  padding-bottom: 8px;
}

img {
  display: block;
}

.team-texts {
  text-align: center;
  margin-bottom: 32px;
}

.team-group li {
  background-color: #ffffff;
}

.section-2 {
  display: flex;
  list-style: none;
  gap: 24px;
  padding: 120px 0px;
}

.portfolio-group {
  display: flex;
  gap: 24px;
  list-style: none;
  flex-wrap: wrap;
  justify-content: center;
  margin-bottom: 120px;
}

.portfolio-section h2 {
  margin-top: 120px;
  margin-bottom: 48px;
}

.portfolio-section p {
  padding-left: 16px;
  padding-bottom: 32px;
}

.portfolio-headings {
  padding-top: 32px;
  padding-bottom: 8px;
  padding-left: 16px;
}

.portfolio-texts {
  padding-bottom: 32px;
}

.portfolio-card-texts {
  border: 1px solid #e7e9fc;
}

